# PyMiraiCalculatorApp

./: Main.py  pyproject.toml
.github/workflow/: build.yml
.github/workflows/: build.yml
Modules/: _InvokeWolfram.py  _SetBtnLayout.py  _SetEntries.py  _SettingBtnDatas.py  __init__.py
Modules/BtnCmdMethods/: _BtnCmdUtil.py  _BtnCmds.py  _CheckExpression.py  _IndexRelation.py  _InvokeWolfram.py  _ReplaceExpression.py
UIModules/: _SettingBtnDatas.py  __init__.py
UIModules/BtnCmdMethods/: ]  _BtnCmdUtil.py  _BtnCmds.py
src/Modules/: ._SetBtnLayout.py.swp  ._SettingBtnDatas.py.swp  .__init__.py.swp  BtnDataClass.py  _SetBtnLayout.py  _SetQuitBtn.py  _SettingBtnDatas.py  __init__.py
src/Modules/BtnCmdMethods/: ._BtnCmds.py.swp  ._InvokeWolfram.py.swp  ._ReplaceExpression.py.swp  _BtnCmds.py  _CheckExpression.py  _IndexRelation.py  _InvokeWolfram.py  _ReplaceExpression.py
